feature-auth: реализованы ключевые сервисы + fix багов